--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "apexcharts": "^3.23.1",
-    "bootstrap": "^4.6.0",
-    "core-js": "^3.6.5",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-apexcharts": "^1.6.0",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.2.0"
+    "apexcharts" :              "^3.23.1",
+    "axios" :                   "^0.21.1",
+    "bootstrap" :               "^4.6.0",
+    "core-js" :                 "^3.6.5",
+    "register-service-worker" : "^1.7.1",
+    "vue" :                     "^2.6.11",
+    "vue-apexcharts" :          "^1.6.0",
+    "vue-class-component" :     "^7.2.3",
+    "vue-property-decorator" :  "^9.1.2",
+    "vue-router" :              "^3.2.0"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.30",
