--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "app:dev" :  "vue-cli-service serve",
+    "app:prod" : "vue-cli-service build"
   },
   "dependencies": {
     "apexcharts" :              "^3.23.1",
