--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,11 @@
   "version" :         "1.0.0",
   "description" :     "",
   "main" :            "index.js",
-  "scripts" :         {
-    "build" : "tsc",
-    "dev" :   "ts-node ./lib/server.ts",
-    "start" : "nodemon ./dist/server.js",
-    "prod" :  "npm run build && npm run start"
+  "scripts" : {
+    "build" :      "tsc",
+    "server:dev" : "ts-node ./lib/server.ts",
+    "start" :      "nodemon ./dist/server.js",
+    "prod" :       "npm run build && npm run start"
   },
   "author" :          "",
   "license" :         "ISC",
