--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version" :         "1.0.0",
   "description" :     "",
   "main" :            "index.js",
-  "scripts" : {
+  "scripts" :         {
     "build" :      "tsc",
     "server:dev" : "ts-node ./lib/server.ts",
     "start" :      "nodemon ./dist/server.js",
@@ -12,9 +12,11 @@
   "author" :          "",
   "license" :         "ISC",
   "dependencies" :    {
-    "body-parser" : "^1.19.0",
-    "cors" :        "^2.8.5",
-    "express" :     "^4.17.1"
+    "@types/mysql" : "^2.15.17",
+    "body-parser" :  "^1.19.0",
+    "cors" :         "^2.8.5",
+    "express" :      "^4.17.1",
+    "mysql" :        "^2.18.1"
   },
   "devDependencies" : {
     "@types/express" : "^4.17.11",
