--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,18 @@
   "author" :          "",
   "license" :         "ISC",
   "dependencies" :    {
-    "@types/mysql" :      "^2.15.17",
     "body-parser" :       "^1.19.0",
     "cors" :              "^2.8.5",
     "express" :           "^4.17.1",
     "http-status-codes" : "^2.1.4",
-    "mysql" :             "^2.18.1"
+    "moment" :            "^2.29.1",
+    "mysql2" :            "^2.2.5"
   },
   "devDependencies" : {
     "@types/express" : "^4.17.11",
     "@types/node" :    "^14.14.22",
+    "@types/moment" :  "^2.13.0",
+    "@types/mysql" :   "^2.15.17",
     "ts-node" :        "^9.1.1",
     "typescript" :     "^4.1.3"
   }
