--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,31 @@
 {
-  "name" :            "powa-server",
-  "version" :         "1.0.0",
-  "description" :     "",
-  "main" :            "index.js",
-  "scripts" :         {
-    "build" :      "tsc",
-    "server:dev" : "ts-node ./lib/server.ts",
-    "start" :      "nodemon ./dist/server.js",
-    "prod" :       "npm run build && npm run start"
-  },
-  "author" :          "",
-  "license" :         "ISC",
-  "dependencies" :    {
-    "body-parser" :       "^1.19.0",
-    "cors" :              "^2.8.5",
-    "express" :           "^4.17.1",
-    "http-status-codes" : "^2.1.4",
-    "moment" :            "^2.29.1",
-    "mysql2" :            "^2.2.5"
-  },
-  "devDependencies" : {
-    "@types/express" : "^4.17.11",
-    "@types/node" :    "^14.14.22",
-    "@types/moment" :  "^2.13.0",
-    "@types/mysql" :   "^2.15.17",
-    "ts-node" :        "^9.1.1",
-    "typescript" :     "^4.1.3"
-  }
+	"name" :            "powa-server",
+	"version" :         "1.0.0",
+	"description" :     "",
+	"main" :            "index.js",
+	"scripts" :         {
+		"server:dev" :  "ts-node ./lib/server.ts",
+		"server:prod" : "tsc",
+		"start" :       "npx nodemon ./dist/server.js",
+		"prod" :        "npm run server:prod && npm run start"
+	},
+	"author" :          "",
+	"license" :         "ISC",
+	"dependencies" :    {
+		"body-parser" :       "^1.19.0",
+		"cors" :              "^2.8.5",
+		"express" :           "^4.17.1",
+		"http-status-codes" : "^2.1.4",
+		"moment" :            "^2.29.1",
+		"mysql2" :            "^2.2.5",
+		"nodemon" :           "^2.0.7"
+	},
+	"devDependencies" : {
+		"@types/express" : "^4.17.11",
+		"@types/node" :    "^14.14.22",
+		"@types/moment" :  "^2.13.0",
+		"@types/mysql" :   "^2.15.17",
+		"ts-node" :        "^9.1.1",
+		"typescript" :     "^4.1.3"
+	}
 }
