--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,10 @@
 	},
 	"devDependencies" : {
 		"@types/express" : "^4.17.11",
-		"@types/node" :    "^14.14.22",
 		"@types/moment" :  "^2.13.0",
 		"@types/mysql" :   "^2.15.17",
+		"@types/node" :    "^14.14.22",
+		"dotenv" :         "^8.2.0",
 		"ts-node" :        "^9.1.1",
 		"typescript" :     "^4.1.3"
 	}
