--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "app:dev" :      "npx vue-cli-service serve",
-    "app:prod" :     "npx vue-cli-service build",
-    "server:build" : "cd server && npm run server:build",
-    "start" :        "cd server && npm run server:start"
+	  "app:dev" :      "npx vue-cli-service serve",
+	  "app:prod" :     "npx vue-cli-service build",
+	  "server:dev" :   "cd server && npm run server:dev",
+	  "server:build" : "cd server && npm run server:build",
+	  "start" :        "cd server && npm run server:start"
   },
   "dependencies": {
     "apexcharts" :              "^3.23.1",
