--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,14 @@
 	"author" :          "",
 	"license" :         "ISC",
 	"dependencies" :    {
-		"body-parser" :       "^1.19.0",
-		"cors" :              "^2.8.5",
-		"express" :           "^4.17.1",
-		"http-status-codes" : "^2.1.4",
-		"moment" :            "^2.29.1",
-		"mysql2" :            "^2.2.5",
-		"nodemon" :           "^2.0.7"
+		"body-parser" :        "^1.19.0",
+		"cors" :               "^2.8.5",
+		"express" :            "^4.17.1",
+		"express-basic-auth" : "^1.2.0",
+		"http-status-codes" :  "^2.1.4",
+		"moment" :             "^2.29.1",
+		"mysql2" :             "^2.2.5",
+		"nodemon" :            "^2.0.7"
 	},
 	"devDependencies" : {
 		"@types/express" : "^4.17.11",
